--- a/src/app.css
+++ b/src/app.css
@@ -3,25 +3,64 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: 'Pretendard';
+    font-family: Pretendard;
     font-weight: 100;
-    font-style: normal;
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Thin.eot');
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Thin.eot?#iefix') format('embedded-opentype'),
-    url('https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Thin.woff2') format('woff2'),
-    url('https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Thin.woff') format('woff'),
-    url('https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Thin.ttf') format("truetype");
-    font-display: swap;
+    src: local("Pretendard Thin"),
+    url("./assets/fonts/Pretendard-Thin.woff2") format('woff2');
 }
 
 @font-face {
-    font-family: 'Pretendard';
+    font-family: Pretendard;
     font-weight: 200;
-    font-style: normal;
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-ExtraLight.eot');
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-ExtraLight.eot?#iefix') format('embedded-opentype'),
-    url('https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-ExtraLight.woff2') format('woff2'),
-    url('https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-ExtraLight.woff') format('woff'),
-    url('https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-ExtraLight.ttf') format("truetype");
-    font-display: swap;
+    src: local("Pretendard Extra Light"),
+    url("./assets/fonts/Pretendard-ExtraLight.woff2") format('woff2');
+}
+
+@font-face {
+    font-family: Pretendard;
+    font-weight: 300;
+    src: local("Pretendard Light"),
+    url("./assets/fonts/Pretendard-Light.woff2") format('woff2');
+}
+
+@font-face {
+    font-family: Pretendard;
+    font-weight: 400;
+    src: local("Pretendard Regular"),
+    url("./assets/fonts/Pretendard-Regular.woff2") format('woff2');
+}
+
+@font-face {
+    font-family: Pretendard;
+    font-weight: 500;
+    src: local("Pretendard Medium"),
+    url("./assets/fonts/Pretendard-Medium.woff2") format('woff2');
+}
+
+@font-face {
+    font-family: Pretendard;
+    font-weight: 600;
+    src: local("Pretendard Semi Bold"),
+    url("./assets/fonts/Pretendard-SemiBold.woff2") format('woff2');
+}
+
+@font-face {
+    font-family: Pretendard;
+    font-weight: 700;
+    src: local("Pretendard Bold"),
+    url("./assets/fonts/Pretendard-Bold.woff2") format('woff2');
+}
+
+@font-face {
+    font-family: Pretendard;
+    font-weight: 800;
+    src: local("Pretendard Extra Bold"),
+    url("./assets/fonts/Pretendard-ExtraBold.woff2") format('woff2');
+}
+
+@font-face {
+    font-family: Pretendard;
+    font-weight: 900;
+    src: local("Pretendard Black"),
+    url("./assets/fonts/Pretendard-Black.woff2") format('woff2');
 }
